# shogi-ai-pytorch

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: explorer.md
.claude/skills/debug/: SKILL.md
.claude/skills/implement/: SKILL.md  chapter-map.md  shogi-rules.md
.claude/skills/test-e2e/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
src/shogi_ai/: __init__.py  cli.py
src/shogi_ai/engine/: mcts.py  minimax.py  random_player.py
src/shogi_ai/game/: protocol.py
src/shogi_ai/game/animal_shogi/: __init__.py  board.py  display.py  moves.py  state.py  types.py
src/shogi_ai/game/full_shogi/: board.py  display.py  moves.py  state.py  types.py
src/shogi_ai/model/: config.py  network.py
src/shogi_ai/training/: arena.py  self_play.py  train_loop.py  trainer.py
src/shogi_ai/web/: app.py
src/shogi_ai/web/static/: app.js  index.html  style.css
tests/: test_smoke.py
tests/engine/: test_mcts.py  test_mcts_edge.py  test_minimax.py  test_minimax_full.py  test_random_player.py
tests/game/animal_shogi/: test_board.py  test_display.py  test_moves.py  test_state.py  test_types.py
tests/game/full_shogi/: test_board.py  test_comprehensive.py  test_moves.py  test_state.py  test_types.py
tests/model/: test_network.py
tests/training/: test_self_play.py  test_trainer.py
tests/web/: test_app.py
